--- a/sneakerbox_fullstack/package.json
+++ b/sneakerbox_fullstack/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "algolia": "0.0.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
@@ -28,7 +29,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "stockx-checker": "^1.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
