--- a/sneakerbox_fullstack/package.json
+++ b/sneakerbox_fullstack/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.4.22",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-fetch": "^2.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
